# nao_humotion_adaper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  naojointinterface.cpp  naojointinterface.hpp  package.xml  qiproject.xml
include/: naojointinterface.hpp  naoqiwrapper.hpp
src/: naojointinterface.cpp  naoqiwrapper.cpp
